styling bug fix

--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -14,7 +14,7 @@
 
         <!--/div-->
 
-        <div class = "col" style="margin-right:8px;">
+        <div class = "col" style="margin-right:10px; margin-left:10px;">
 
             {%if not hide_info%}
             <div class = "row">
