--- a/patches/templates/patches/header.html
+++ b/patches/templates/patches/header.html
@@ -1,3 +1,4 @@
+<div style="display:inline-block;" >
 <h1>
 {%if choice == 'index'%}<span class="headersel"></span>{%endif%}<!--
 --><a href = "{% url 'patches:index' %}" class="home-link ">Audio Files</a>
@@ -5,4 +6,11 @@
 {%if choice == 'compare'%}<span class="headersel"></span>{%endif%}<!--
 --><a href = "{% url 'patches:compare'%}" class="home-link">File Comparison </a>
 </h1>
- 
+</div>
+<div style="float:right;position:relative;bottom:-1.5em;">
+<div class="custom-control custom-switch" style="visibility:hidden;" id="autoplaydiv">
+    <input type = "checkbox" class="custom-control-input" id="autoplayswitch">
+    <label class="custom-control-label" for="autoplayswitch">Autoplay</label>
+</div>
+</div>
+
