autoplay only when there is more than one thing

--- a/patches/templates/patches/base.html
+++ b/patches/templates/patches/base.html
@@ -37,8 +37,10 @@
 
         //Only show if javascript enabled
         var autoplaydiv = document.getElementById("autoplaydiv");
-        autoplaydiv.style.visibility='visible';
-
+        if(audiolist.length > 1)
+        {
+            autoplaydiv.style.visibility='visible';
+        }
         var autoplay = document.getElementById("autoplayswitch");
 
 
