no header choice in detail view

--- a/patches/templates/patches/detail.html
+++ b/patches/templates/patches/detail.html
@@ -7,7 +7,7 @@ Audio File: {{patchentry.name}}
 
 {% block list_body %}
 <div class="col-auto entry-header">
-    {% include "patches/header.html" with choice="index" %}
+    {% include "patches/header.html" with choice="" %}
 </div>
 
 {% include "patches/entry.html" with entry=patchentry collapse=False%}
