wire up tags header selection

--- a/patches/templates/patches/tags.html
+++ b/patches/templates/patches/tags.html
@@ -8,7 +8,7 @@ Audio File: {{patchentry.name}}
 
 {% block list_body %}
 <div class="col-auto entry-header">
-    {% include "patches/header.html" with choice="" %}
+    {% include "patches/header.html" with choice="tags" %}
 </div>
 
 {%for tag in tags%}
