--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -51,7 +51,7 @@
             <div class = "row" style="margin-top:0.25em;">
             {% if entry.tags.all %}
             Tags: &nbsp;{% for tag in entry.tags.all %}
-            <a href = "{{request.path}}?{%if author%}author={{author.author.display_name}}{%endif%}tags={%if tags%}{{tags}}{%endif%}{%if not tag.name in taglist%}{%if tags%},{%endif%}{{tag.name}}{%endif%}" class="tooltiplink">
+            <a href = "{{request.path}}?{%if author%}author={{author.author.display_name}}{%endif%}tags={%if tags%}{{tags}}{%endif%}{%if not tag.name in taglist%}{%if tags%},{%endif%}{{tag.name}}{%endif%}" class="tooltiplink{%if tag.name in taglist%} tag-selected{%endif%}">
                 {{tag.name}}<div class="tooltiptext">{{tag.name}}: {{tag.summary}}</div>
             </a>
             {% if not forloop.last%}<div class="tagdiv"></div>{% endif %}
