--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -108,6 +108,14 @@ li > p {
     margin-bottom:0;
 }
 
+.compare-button{
+    border:1px solid black;
+    background:none;
+    margin-top:2px;
+    margin-bottom:2px;
+
+}
+
 /* Tag Tooltips */
 
 .tag-selected{
