--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -42,8 +42,10 @@ li > p {
 .message-close {
     cursor: pointer;
     background : rgba(0,0,0,.1);
-    padding-left: 0.25em;
-    padding-right: 0.25em;
+    width: 1.25em;
+    height:1.25em;
+    line-height:1.25em;
+    display:inline-block;
 }
 
 
