Only show similars if they exist

--- a/patches/templates/patches/detail.html
+++ b/patches/templates/patches/detail.html
@@ -12,6 +12,7 @@ Audio File: {{patchentry.name}}
 
 {% include "patches/entry.html" with entry=patchentry collapse=False%}
 
+{%if similar%}
 <div class="entry-question">
     <h2>Similar Audio Files<h2>
 </div>
@@ -20,6 +21,7 @@ Audio File: {{patchentry.name}}
 {%widthratio answer.get_score 1 100 %}% ({{answer.count_a}} / {{answer.count_b|add:answer.count_a}})
 {% include "patches/entry.html" with entry=answer.entryB collapse=True%}
 {% endfor %}
+{%endif%}
 
 {% endblock %}
 	
