--- a/patches/templates/patches/compare.html
+++ b/patches/templates/patches/compare.html
@@ -38,6 +38,9 @@ Recording Comparison
         <button type="submit" name="answer" value="a" class="compare-button">{{question.answer_a}}</button>
     / 
         <button type="submit" name="answer" value="b" class="compare-button">{{question.answer_b}}</button>   
+    / 
+        <button type="submit" name="answer" value="skip" class="compare-button">Skip</button>   
+ 
     </form>
     {% endif %}
     {%else%}
