--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -48,11 +48,6 @@ li > p {
     display:inline-block;
 }
 
-
-
-
-
-
 /* Header */
 
 .headerdiv {
@@ -67,6 +62,44 @@ li > p {
     position:relative;
     bottom: -0.125em;
     margin-right:0.125em;
+}
+
+/* Pagination */
+
+.page-container{
+width:2em;
+height:2em;
+display:inline-block;
+//border-left: 1px solid black;
+//border-right: 1px solid black;
+cursor:pointer;
+display:inline-flex;
+overflow:hide;
+}
+.paginate-left{
+border-right: 1px solid black;
+}
+.paginate-right{
+border-left: 1px solid black;
+}
+.paginate-center{
+border-left: 1px solid black;
+}
+
+
+.page-container:hover
+{
+    background:#ddd;
+}
+
+.page-container a{
+    align-self:center;
+    margin:auto;
+    color:black;
+}
+.page-container a:hover{
+    text-decoration:none;
+    color:inherit;
 }
 
 /* Main List */
