--- a/patches/static/patches/style.css
+++ b/patches/static/patches/style.css
@@ -66,27 +66,31 @@ li > p {
 
 /* Pagination */
 
+.page-wrapper-left{
+    display: inline-flex;
+    float:left;
+}
+.page-wrapper-right{
+    display: inline-flex;
+    float:right;
+}
+.page-wrapper-center{
+    display:inline-flex;
+    width:100%;
+    overflow:hidden;
+    position:relative;
+}
+
+  /* Container for page links */
+
 .page-container{
-width:2em;
-height:2em;
-display:inline-block;
-//border-left: 1px solid black;
-//border-right: 1px solid black;
-cursor:pointer;
-display:inline-flex;
-overflow:hide;
+    width:2em;
+    height:2em;
+    display:inline-block;
+    cursor:pointer;
+    display:inline-flex;
+    overflow:hide;
 }
-.paginate-left{
-border-right: 1px solid black;
-}
-.paginate-right{
-border-left: 1px solid black;
-}
-.paginate-center{
-border-left: 1px solid black;
-}
-
-
 .page-container:hover
 {
     background:#ddd;
@@ -101,6 +105,16 @@ border-left: 1px solid black;
     text-decoration:none;
     color:inherit;
 }
+
+.page-border-left{
+border-left: 1px solid black;
+}
+.page-border-right{
+border-right: 1px solid black;
+}
+
+
+
 
 /* Main List */
 
