--- a/patches/templates/patches/base.html
+++ b/patches/templates/patches/base.html
@@ -39,6 +39,7 @@
         var autoplaydiv = document.getElementById("autoplaydiv");
         if(audiolist.length > 1)
         {
+            autoplaydiv.classList.remove('hide-autoplay');
             autoplaydiv.style.visibility='visible';
         }
         var autoplay = document.getElementById("autoplayswitch");
