--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -21,7 +21,7 @@
                 </a>
             </h3>
             <h3 class = "entry-date">
-                {{entry.date}} &#xff5c; {{entry.date|timesince}} ago
+                {{entry.date}} &#xff5c; {{entry.date|timesince}} ago {{entry.meta.duration}}
             </h3>
             </div>
             {%endif%}
