--- a/patches/templates/patches/base.html
+++ b/patches/templates/patches/base.html
@@ -1,4 +1,4 @@
-{% load static tttcms_tags %}
+{% load static tttcms_tags licensing_tags%}
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'patches/style.css' %}">
+
+    {% licensing_style %}
 
     <title>{% block title %}{% endblock %}</title>
 
