more better overflow

--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -15,7 +15,7 @@
 
             {%if not hide_info%}
             <div class = "row" style="flex-wrap:nowrap;">
-            <h3>
+            <h3 style="overflow:visible;">
                  <a href = {% url 'patches:detail' entry.id %}>               
                 {{entry.name}}
                 </a>
