more better date tooltip

--- a/patches/templates/patches/entry.html
+++ b/patches/templates/patches/entry.html
@@ -20,7 +20,7 @@
                 {{entry.name}}
                 </a>
             </h3>
-            <h3 class = "entry-date">
+            <h3 class = "entry-date" title="{{entry.date}} &#xff5c; {{entry.date|timesince}} ago">
                 {{entry.date}} &#xff5c; {{entry.date|timesince}} ago
             </h3>
 
