--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -4,6 +4,7 @@
     <head>
         <title>{% block title %}This is my new project home page{% endblock title %}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="icon" href="{% static 'favicon.ico' %}">
         <style type="text/css">
         @font-face{
             font-family: "CMU";
