--- a/tttweb/templates/fullwidth.html
+++ b/tttweb/templates/fullwidth.html
@@ -4,5 +4,7 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+<div class = "content">
 	{% placeholder "content" %}
+</div>
 {% endblock content %}
