--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -83,6 +83,7 @@
         }
         
         .container {
+            font-family: CMU;
             grid-area: content;
             display:grid;
             padding-left:10px;
