more better sidebar layout

--- a/tttweb/templates/base.html
+++ b/tttweb/templates/base.html
@@ -44,10 +44,16 @@
         .content {
             float: left;
             width: 80%;
+            padding-left:0.5em;
+            padding-right:0.5em;
+            word-wrap:anywhere;
         }
         .sidebar {
             float: left;
+            padding-left:0.5em;
+            padding-right: 0.5em;
             width: 20%;
+            word-wrap:anywhere;
         }
 
         .grid-container { 
@@ -85,8 +91,7 @@
         .container {
             font-family: CMU;
             grid-area: content;
-            display:grid;
-            padding-left:10px;
+            display:flex;
             border-top-style:solid;
         }
         .sidebar-main {
