--- a/tttweb/templates/sidebar_left.html
+++ b/tttweb/templates/sidebar_left.html
@@ -4,7 +4,7 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
-    <div class="sidebar">
+    <div class="sidebar" style="border-right: 1px solid black;">
         {% placeholder "sidebar" %}
     </div>
     <div class="content">
