--- a/tttweb/templates/sidebar_right.html
+++ b/tttweb/templates/sidebar_right.html
@@ -7,7 +7,7 @@
     <div class="content">
         {% placeholder "content" %}
     </div>
-    <div class="sidebar">
+    <div class="sidebar" style="border-left: 1px solid black;">
         {% placeholder "sidebar" %}
     </div>
 {% endblock content %}
